--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 </head>
 <body>
-<h1>  Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+    <section class="principal">
+     <h1>  Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+     <img src="Combo (1).png" alt="O Combo+ é a junção do Alura+ e do Alura Língua">
+     </section>
 </h1>
 </body>
 </html>
