--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 </head>
 <body>
     <section class="principal">
-     <h1>  Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+     <h1> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
      <img src="Combo (1).png" alt="O Combo+ é a junção do Alura+ e do Alura Língua">
      </section>
-</h1>
 </body>
 </html>
