--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <img src="Combo (1).png" alt="O Combo+ é a junção do Alura+ e do Alura Língua">
      <a href="www.alura.com.br" class="principal-botao">Assine por 12x de R$120,00*</a>
      <a href="www.alura.com.br" class="principal-botao-2">Assinar somente o Alura</a>
-     <p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
+     <p href="www.alura.com.br" class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
 
      </section>
 </body>
