--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
 <img src="Telas.png" alt="Tela da Alura plus e do Alura Língua">
 </section>
 
+<section clas="secundaria"></section>
+
+<img src="Notebook.png" alt="Notebook com a pagina do curso HTML5 e CSS3">
+
 </body>
 </html>
