--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section class="principal">
 <div class="principal-caixa">
 <h1 class="principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<img src="Combo.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
+<img src="Combo(2).png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
 <a href="www.alura.com.br&quot; class="principal-botao">Assine por 12x de R$ 120,00*</a>
 <a href="www.alura.com.br&quot; class="principal-botao-2">Assinar somente o Alura</a>
 <p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
@@ -38,7 +38,11 @@
 
 <section clas="secundaria"></section>
 
-<img src="Notebook.png" alt="Notebook com a pagina do curso HTML5 e CSS3">
-
+<img src="Notebook.png" alt="Notebook com a pagina do curso HTML5 e CSS3" class="secundaria-imagem">
+<div class="secundaria-caixa">
+    <h2 class="secundaria-titulo">Baixe seus cursos</h2>
+    <p class="secundaria-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+    </p>
+</div>
 </body>
 </html>
