--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
     <p class="secundaria-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
     </p>
 </div>
+<section class="dispositivos">
+    <h2 class="secundaria-titulo">Disponível nos seus dispositivo favoritos</h2>
+</section>
 </body>
 </html>
