--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 </div>
 <section class="dispositivos">
     <h2 class="secundaria-titulo">Disponível nos seus dispositivo favoritos</h2>
+    <ul clas="dispositivos-lista">
+        
+        <li>
+            <img src="" alt="">
+            <h3 class="lista-item">TV</h3>
+        </li>
+        <li>
+            <img src="" alt="">
+            <h3 class="lista-item">Compuadores</h3>
+        </li>
+        <li>
+            <img src="" alt="">
+            <h3 class="lista-item">Celulares e tablets</h3>
+        </li>
+    </ul>
 </section>
 </body>
 </html>
