--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3 class="lista-item">Compuadores</h3>
         </li>
         <li>
-            <img src="Telas.png" alt="">
+            <img src="celular.png" alt="">
             <h3 class="lista-item">Celulares e tablets</h3>
         </li>
     </ul>
