--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
     <ul clas="dispositivos-lista">
         
         <li>
-            <img src="tv.png" alt="">
+            <img src="tv.png" alt="ícone de tv">
             <h3 class="lista-item">TV</h3>
         </li>
         <li>
-            <img src="computador.png" alt="">
+            <img src="computador.png" alt="ícone de computador">
             <h3 class="lista-item">Compuadores</h3>
         </li>
         <li>
-            <img src="celular.png" alt="">
+            <img src="celular.png" alt="ícone de celular">
             <h3 class="lista-item">Celulares e tablets</h3>
         </li>
     </ul>
