--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width-device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="principal">
 <div class="principal-caixa">
 <h1 class="principal-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
 <img src="Combo (2).png" alt="O Combo+ é a junção do Alura+ e o Alura Língua"class="principal-imagem">
-<a href="www.alura.com.br&quot; class="principal-botao">Assine por 12x de R$ 120,00*</a>
-<a href="www.alura.com.br&quot; class="principal-botao-2">Assinar somente o Alura</a>
+<a href="www.alura.com" class="principal-botao">Assine por 12x de R$ 120,00*</a>
+<a href="www.alura.com." class="principal-botao-2">Assinar somente o Alura</a>
 <p class="principal-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
 </div>
 </section>
@@ -31,7 +31,7 @@
 <section class="secundaria">
 <div class="secundaria-caixa">
 <p class="secundaria-texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-<a href="www.alura.com.br&quot; class="principal-botao secundaria-botao">Assine o Combo+</a>
+<a href="www.alura.com.br" class="principal-botao secundaria-botao">Assine o Combo+</a>
 </div>
 <img src="Telas.png" alt="Tela da Alura plus e do Alura Língua">
 </section>
@@ -45,8 +45,8 @@
     </p>
 </div>
 <section class="dispositivos">
-    <h2 class="secundaria-titulo">Disponível nos seus dispositivo favoritos</h2>
-    <ul clas="dispositivos-lista">
+    <h2 class="dispositivo-titulo">Disponível nos seus dispositivo favoritos</h2>
+    <ul class="dispositivos-lista">
         
         <li>
             <img src="tv.png" alt="ícone de tv">
