--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <img src="Telas.png" alt="Tela da Alura plus e do Alura Língua">
 </section>
 
-<section clas="secundaria"></section>
+<section class="secundaria">
 
 <img src="Notebook.png" alt="Notebook com a pagina do curso HTML5 e CSS3" class="secundaria-imagem">
 <div class="secundaria-caixa">
@@ -44,6 +44,7 @@
     <p class="secundaria-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
     </p>
 </div>
+</section>
 <section class="dispositivos">
     <h2 class="dispositivo-titulo">Disponível nos seus dispositivo favoritos</h2>
     <ul class="dispositivos-lista">
